# Pokemon-Compare-Stats

./: CMakeLists.txt  Pokemon.cpp  Pokemon.h  PythonOutput.py  README.md  Trainer.cpp  Trainer.h  main.cpp  pokemonNew2.csv  project4_outfile.csv
